<resources>
    <string name="app_name">YaYa新医师</string>
    <string name="company_name">YaYa医师 V</string>
    <string name="input_name">请输入邮箱或手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="affirm">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="well">好</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="province_city">省市</string>
    <string name="search">搜索</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="connect_timeout">超时，请检查当前网络</string>
    <string name="network_disabled">当前网络不可用，请检查网络配置</string>
    <string name="login">登录</string>
    <string name="binding_login">绑定并登录</string>
    <string name="to_register">我要注册</string>
    <string name="we_chat_login">微信登录</string>
    <string name="wx_binding">账号绑定</string>
    <string name="wx_accredit_error">授权失败</string>
    <string name="wx_check_normal">请检查“微信”是否正常启动</string>
    <string name="register">注册</string>
    <string name="real_name">真实姓名</string>
    <string name="pwd">输入6-24位密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="hospital_name">医院名称</string>
    <string name="phone_number">输入手机号码</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="input_right_pwd_num">请输入6~24位密码</string>
    <string name="input_special_symbol">请不要输入特殊字符</string>
    <string name="check_pwd_is_same">请核对密码是否一致</string>
    <string name="hospital">医院</string>
    <string name="guang_dong">广东省</string>
    <string name="guang_zhou">广州市</string>
    <string name="change">更改</string>
    <string name="province_city_district">省市区</string>
    <string name="special">内科 普内科</string>
    <string name="choose_hospital">选择医院</string>
    <string name="department">输入科室名称</string>
    <string name="title">初级职称 医师</string>
    <string name="captcha">输入6位验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="not_phone_number">该号码不是电话号，请输入正确的电话号码</string>
    <string name="get_captcha_frequently">获取验证码太频繁</string>
    <string name="free_provide">该账号（价值69.9元），由%s为您免费提供</string>
    <string name="you_agree">点击“注册”即表示您同意</string>
    <string name="hint_not_fill">未填写</string>
    <string name="optional">选填</string>
    <string name="required">必填</string>
    <string name="open_location_service">请在设置-隐私-定位服务中打开权限”</string>
    <string name="allow_locate_permission">并允许定位服务</string>
    <string name="binding_phone_or_wx">绑定微信或者手机号可直接</string>
    <string name="is_binding">登录，是否绑定</string>
    <string name="go_binding">去绑定</string>
    <string name="email_phone">电子邮箱或手机号</string>
    <string name="data_center">数据中心</string>
    <string name="meeting">会议</string>
    <string name="thomson">汤森路透</string>
    <string name="drug_list">药品目录</string>
    <string name="clinical_guide">临床指南</string>
    <string name="drug_list_search_hint">药品通用名/商品名或者批准文号</string>
    <string name="clinical_guide_search_hint">搜索症状/疾病关键词</string>
    <string name="forget_pwd">找回密码</string>
    <string name="email">电子邮箱</string>
    <string name="submit_email">提交</string>
    <string name="input_email">请输入注册时的邮箱地址</string>
    <string name="input_right_email">请输入正确邮箱</string>
    <string name="forget_pwd_success">重置密码的邮件已经发送至您的邮箱</string>
    <string name="know">知道了</string>
    <string name="confirm_login">确认并登录</string>
    <string name="pass_sms">通过短信</string>
    <string name="pass_email">通过邮件</string>
    <string name="send_email">发送验证邮件</string>
    <string name="input_phone">手机号（登陆账号）</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="title_home">首页</string>
    <string name="title_meeting">会议</string>
    <string name="title_data">数据</string>
    <string name="title_me">我</string>
    <string name="title_detail">详情</string>
    <string name="title_fetch_captcha">获取激活码</string>
    <string name="register_key">激活码</string>
    <string name="activation_code_explain_one">如何获得YaYa医师激活码？</string>
    <string name="activation_code_explain_two">您可以通过以下三种方法获得激活码：</string>
    <string name="activation_code_explain_three">
        1、淘宝网搜索“YaYa医师激活码”并进行购买，每个激活码69.9元；\n
        2、YaYa医师每位注册用户均有10次免费分享激活码邀请好友加入的机会；\n
        3、发送您的姓名、医院名称、执业资格证号到app@medcn.cn，我们每天会随机送出20个免费激活码。</string>
    <string name="hospital_location">医院所在省市：</string>
    <string name="hospital_location_default">医院所在省市：广东 广州</string>
    <string name="default_date">2月9日16:30</string>
    <string name="default_time">时长:1.5小时</string>
    <string-array name="sections">
        <item>普内科</item>
        <item>呼吸内科</item>
        <item>心血管内科</item>
        <item>消化内科</item>
        <item>风湿科</item>
        <item>肾内科</item>
        <item>血液科</item>
        <item>内分泌科</item>
        <item>神经内科</item>
        <item>肿瘤内科</item>
        <item>重症医学科</item>
        <item>老年医学科</item>
        <item>急诊内科</item>
        <item>介入科</item>
        <item>皮肤科</item>
        <item>感染科</item>
        <item>放疗科</item>
        <item>中医科</item>
        <item>康复科</item>
        <item>预防保健科</item>
        <item>疼痛科</item>
        <item>生殖科</item>
        <item>儿科</item>
        <item>儿内科</item>
        <item>儿外科</item>
        <item>普外科</item>
        <item>肝胆外科</item>
        <item>结直肠外科</item>
        <item>胃外科</item>
        <item>血管外科</item>
        <item>甲状腺外科</item>
        <item>乳腺外科</item>
        <item>胸外科</item>
        <item>心外科</item>
        <item>泌尿外科</item>
        <item>骨科</item>
        <item>神经外科</item>
        <item>烧伤科</item>
        <item>整形外科</item>
        <item>麻醉科</item>
        <item>耳鼻喉科</item>
        <item>眼科</item>
        <item>口腔科</item>
        <item>急诊外科</item>
        <item>胃肠外科</item>
        <item>妇产科</item>
        <item>妇科</item>
        <item>产科</item>
        <item>检验科</item>
        <item>放射科</item>
        <item>CT/MR室</item>
        <item>核医学科</item>
        <item>超声科</item>
        <item>病理科</item>
        <item>药剂科</item>
        <item>输血科</item>
        <item>体检科</item>
        <item>自定义</item>
    </string-array>
    <string name="meeting_epn_pay_before">参加本会议需支付%d象数</string>
    <string name="meeting_epn_pay_after">已成功支付%d象数</string>
    <string name="meeting_epn_award_before">完成本次会议可获得%1$d象数，剩余%2$d个名额</string>
    <string name="meeting_epn_award_after">已成功获得%d象数</string>
    <string name="meeting_cme_award_before">完成本次会议可获得%1$d学分，剩余%2$d个名额</string>
    <string name="meeting_cme_award_after">已成功获得%d学分</string>
    <string name="meeting_file_more">查看全部 %d 个文件</string>
    <string name="exam">考试</string>
    <string name="exam_no_start">考试还未开始</string>
    <string name="exam_stop">考试已停止答卷</string>
    <string name="exam_end">该考试会议已结束</string>
    <string name="exam_participation">请稍后再参与</string>
    <string name="exam_contact">如需考试请联系主办方咨询</string>
    <string name="exam_finish">距离考试结束还有 %d 分钟</string>
    <string name="exam_submit_confirm">请确认提交答卷</string>
    <string name="exam_submit_hint_no_finish">还有 %d 题未完成, 继续提交将不得分是否确认提交答卷?</string>
    <string name="exam_submit_hint_finish">确定提交答案?</string>
    <string name="exam_xs_close">s后自动关闭</string>
    <string name="exam_host">主办方:</string>
    <string name="finish_exam">您已完成考试</string>
    <string name="meeting_detail">会议详情</string>
    <string name="meeting_intro">会议简介</string>
    <string name="course_no">没有PPT文件</string>
    <string name="cancel_collect">取消收藏成功</string>
    <string name="collect_no_start">收藏成功，关注并绑定YaYa医师微信公众号，在会议开始前15分钟可收到提醒。</string>
    <string name="collect_finish">收藏成功</string>
    <string name="que">问卷</string>
    <string name="que_submit_hint_no_finish">还有 %d 题未完成是否确认提交问卷?</string>
    <string name="que_submit_hint_finish">确定提交问卷?</string>
    <string name="submit">提交</string>
    <string name="enough">象数不足</string>
    <string name="need_pay">"本会议需要支付%d象数"</string>
    <string name="sign">签到</string>
    <string name="signed">已签到</string>
    <string name="video">视频</string>
    <string name="meet">会议</string>
    <string name="video_add_up">累计 </string>
    <string name="video_add_up_all">总计:</string>
    <string name="video_studied_no_start">未开始学习</string>
    <string name="video_no_see">未观看</string>
    <string name="comment">评论</string>
    <string name="comment_import">请输入评论内容</string>
    <string name="minute">分钟</string>
    <string name="thank_join">感谢您的参与!</string>
    <string name="send_error">发送失败</string>
    <string name="can_not_find_relevant_software">没有安装相应软件</string>
    <string name="notice">通知</string>
    <string name="profile_center">个人中心</string>
    <string name="my_collection">我的收藏</string>
    <string name="download_data">资料下载</string>
    <string name="download_ing">正在下载...</string>
    <string name="download_pause">暂停下载</string>
    <string name="not_start_download">未开始下载</string>
    <string name="open_data">打开资料</string>
    <string name="settings">设置</string>
    <string name="wifi_auto_download_new_apk">WiFi下后台自动下载最新版本</string>
    <string name="audio_auto_play_only_wifi">音频仅在WiFi下自动播放</string>
    <string name="wx_account">微信账号</string>
    <string name="phone_num_account">手机号账号</string>
    <string name="email_account">电子邮箱账号</string>
    <string name="check_version">检查新版本</string>
    <string name="no_bind">未绑定</string>
    <string name="already_latest_version">已是最新版本</string>
    <string name="clear_img_cache">清理图片缓存</string>
    <string name="clear_sound_cache">清理声音缓存</string>
    <string name="clear_img_cache_success">图片缓存清理完毕</string>
    <string name="clear_sound_cache_success">声音缓存清理完毕</string>
    <string name="exit_account">退出当前账号</string>
    <string name="close_app">关闭YaYa</string>
    <string name="held_and_feedback">帮助与反馈</string>
    <string name="update_log">更新日志</string>
    <string name="disclaimer">免责声明</string>
    <string name="contribution_invited">征稿启事</string>
    <string name="jing_xin">敬信科技</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="service_agreement">服务协议</string>
    <string name="email_subject">YaYa医师--意见反馈</string>
    <string name="change_pwd">修改密码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_confirm_pwd">请输入确认密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="confirm_no_equal_new">确认密码与新密码不一致！</string>
    <string name="pwd_places_no_right">请输入6~18位密码</string>
    <string name="pwd_change_success">密码修改成功</string>
    <string name="my_attention">我的关注</string>
    <string name="unit_num">单位号</string>
    <string name="file_data">汤森路透</string>
    <string name="cancel_attention">不再关注</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="attention_num_unit">人</string>
    <string name="already_attention">已关注</string>
    <string name="attention">关注</string>
    <string name="attention_success">关注成功</string>
    <string name="cancel_attention_success">已取消关注</string>
    <string name="check_all">查看全部%1$d个文件</string>
    <string name="user_profile">我的资料</string>
    <string name="user_save">完成并保存</string>
    <string name="user_save_success">保存成功</string>
    <string name="user_name">姓名</string>
    <string name="user_hospital">单位</string>
    <string name="user_section">科室</string>
    <string name="user_hospital_grade">医院级别</string>
    <string name="user_title">职称</string>
    <string name="epn">象数</string>
    <string name="epn_unit_ge">个</string>
    <string name="recharge">充值</string>
    <string name="know_epn">了解象数</string>
    <string name="use_rule">使用规则</string>
    <string name="exchange_price">兑换值：</string>
    <string name="national_distribution_goods">全国配送商品</string>
    <string name="purchase_limitation_one">限购一份</string>
    <string name="immediately_exchange">立即兑换</string>
</resources>