<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        style="@style/et.common"
        android:id="@+id/change_pwd_et_old"
        android:layout_marginTop="@dimen/margin"
        android:inputType="textPassword"
        android:maxLength="18"
        android:hint="@string/input_old_pwd"/>

    <View
        style="@style/divider"/>

    <EditText
        style="@style/et.common"
        android:id="@+id/change_pwd_et_new"
        android:inputType="textPassword"
        android:maxLength="18"
        android:hint="@string/input_new_pwd"/>

    <View
        style="@style/divider"/>

    <EditText
        style="@style/et.common"
        android:id="@+id/change_pwd_et_confirm"
        android:inputType="textPassword"
        android:maxLength="18"
        android:hint="@string/confirm_new_pwd"/>

    <TextView
        android:id="@+id/change_pwd_tv"
        style="@style/tv.common"
        android:layout_marginTop="36dp"
        android:text="@string/confirm_change"/>

</LinearLayout>
