<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:moduleView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- 考试 -->
        <yy.doctor.view.meet.ModuleView
            android:id="@+id/meet_module_layout_exam"
            style="@style/v.meeting.module"
            moduleView:module_src="@drawable/meeting_module_selector_exam"
            moduleView:module_text="@string/exam"/>

        <View
            style="@style/v.meeting.divider"/>

        <!-- 问卷 -->
        <yy.doctor.view.meet.ModuleView
            android:id="@+id/meet_module_layout_que"
            style="@style/v.meeting.module"
            moduleView:module_src="@drawable/meeting_module_selector_que"
            moduleView:module_text="@string/que"/>

        <View
            style="@style/v.meeting.divider"/>

        <!-- 视频 -->
        <yy.doctor.view.meet.ModuleView
            android:id="@+id/meet_module_layout_video"
            style="@style/v.meeting.module"
            moduleView:module_src="@drawable/meeting_module_selector_video"
            moduleView:module_text="@string/video"/>

        <View
            style="@style/v.meeting.divider"/>

        <!-- 签到 -->
        <yy.doctor.view.meet.ModuleView
            android:id="@+id/meet_module_layout_sign"
            style="@style/v.meeting.module"
            moduleView:module_src="@drawable/meeting_module_selector_sign"
            moduleView:module_text="@string/sign"/>
    </LinearLayout>

    <!-- 微课 -->
    <TextView
        android:id="@+id/meet_module_layout_course"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="#ccc"
        android:drawableLeft="@drawable/meeting_ic_see"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:text="@string/meet"
        android:textColor="@color/white"
        android:textSize="14dp"/>

</LinearLayout>