<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="24dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_333"
        android:text="@string/activation_code_explain_one"
        android:textSize="20sp"/>

    <TextView
        android:layout_marginTop="16dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_333"
        android:text="@string/activation_code_explain_two"
        android:textSize="16sp"/>

    <TextView
        android:layout_marginTop="36dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_333"
        android:text="@string/activation_code_explain_three"
        android:lineSpacingExtra="18dip"
        android:textSize="14sp"/>

</LinearLayout>
