<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_my_elephant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_nav_bar_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/epn_tv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:visibility="invisible"
            android:textColor="@color/text_80fff"/>

        <TextView
            android:id="@+id/epn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/epn_tv_my"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:textSize="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/epn_tv"
            android:layout_alignBottom="@+id/epn_tv"
            android:layout_marginBottom="4dp"
            android:text="@string/epn_unit_ge"
            android:textSize="18dp"
            android:textColor="@color/text_80fff"/>

    </RelativeLayout>

    <TextView
        style="@style/tv.common"
        android:id="@+id/epe_tv_btn"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/layout_my_elephant"
        android:text="@string/recharge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know_epn"
            android:textSize="14dp"
            android:textColor="@color/text_808080"/>

        <TextView
            android:id="@+id/epn_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="3dp"
            android:text="@string/use_rule"
            android:textSize="14dp"
            android:textColor="@color/text_1ba0cc"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>
