<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="323dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_forget_tooltip"
        android:orientation="vertical">

        <TextView
            android:layout_width="211dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:textColor="@color/text_333"
            android:textSize="16dp"/>

        <View
            style="@style/divider"
            android:layout_gravity="center_horizontal"
            android:layout_width="211dp"/>

        <LinearLayout
            android:layout_width="211dp"
            android:layout_height="104dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="87dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/forget_pwd_ll_tooltip_sms"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_forget_tooltip_sms"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_ic_forget_sms"
                    android:paddingRight="14dp"/>

                <TextView
                    android:id="@+id/forget_pwd_tv_tooltip_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pass_sms"
                    android:textColor="@color/text_28b6b8"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forget_pwd_ll_tooltip_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_forget_tooltip_email"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_ic_forget_email"
                    android:paddingRight="14dp"/>

                <TextView
                    android:id="@+id/forget_pwd_tv_tooltip_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_email"
                    android:textColor="@color/text_2ab81f"
                    android:textSize="14dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/forget_pwd_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/login_ic_forget_close"/>
</LinearLayout>